# kavach

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data/: rl_q_table.meta.json  rl_q_table.npy
data/trained_models/: gbm.pkl  iforest.pkl  lr.pkl  meta.json  ood_detector.pkl  raw_dataset.json  scaler.pkl
deploy/grafana/provisioning/dashboards/: kavach.yml
deploy/prometheus/: prometheus.yml
docs/: INTEGRATIONS.md  THREAT_MODEL.md  blog_post_draft.md  hn_launch_draft.md
examples/: demo_blocked_attack.py
helm/kavach/: Chart.yaml  values.yaml
k8s/: kavach.yaml
kavach/: __init__.py
kavach/api/: __init__.py  server.py
kavach/api/routes/: __init__.py
kavach/behavior/: __init__.py  session_engine.py
kavach/classifier/: __init__.py  attack_classifier.py
kavach/context/: __init__.py  rag_sanitizer.py
kavach/core/: __init__.py  exceptions.py  gateway.py  identity.py  policy_engine.py  risk_scorer.py
kavach/crypto/: kms_provider.py  memory.py
kavach/detectors/: __init__.py  apt_detector.py  exfiltration.py  injection.py  intent_splitter.py  jailbreak.py
kavach/evaluation/: __init__.py  benchmark.py  benchmark_runner.py  red_team.py
kavach/guards/: __init__.py  agent_guard.py  dos_guard.py  input_guard.py  output_guard.py  pii_guard.py  tool_guard.py
kavach/integrations/: __init__.py
kavach/integrations/anthropic/: __init__.py  wrapper.py
kavach/integrations/langchain/: __init__.py  middleware.py
kavach/integrations/openai/: __init__.py  wrapper.py
kavach/memory/: __init__.py  session_manager.py
kavach/ml/: __init__.py  behavioral.py  classifiers.py  dataset.py  download_datasets.py  embeddings.py  ensemble.py  features.py  feedback.py  intent.py  ood_detector.py  redis_behavioral.py  rl_advisor.py  train_all.py  train_rl.py  train_v1.py  trainer.py
kavach/ml/sfm/: adversarial.py  dataset.py  model.py  trainer.py
kavach/observability/: __init__.py  dashboard.py  logger.py  metrics.py  prometheus.py  tracer.py
kavach/policies/: __init__.py  loader.py  validator.py
kavach/policies/templates/: default.yaml
kavach/redteam/: __init__.py  mutator.py  pipeline.py  runner.py
kavach/router/: __init__.py  model_router.py
kavach/sandbox/: __init__.py  docker_sandbox.py
kavach/sanitizers/: __init__.py  context_filter.py  output_sanitizer.py  prompt_cleaner.py
kavach/vectors/: __init__.py  attack_store.py
tests/: benchmark_sfm.py  test_api.py  test_detectors.py  test_ml_ensemble.py  test_pentagon_grade.py  test_policy_engine.py  test_tool_guard.py
