[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kavach"
version = "0.1.0"
description = "The security and permission layer for agentic AI systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Abhishek Jha" },
]
keywords = ["ai", "security", "agents", "llm", "prompt-injection", "rbac"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "ruff>=0.1.0",
    "mypy>=1.5",
]
ml = [
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "sentence-transformers>=2.2",
]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
langchain = ["langchain-core>=0.1"]
all = [
    "kavach[openai,anthropic,langchain,ml]",
]

[project.urls]
Homepage = "https://github.com/abhishekjha/kavach"
Documentation = "https://kavach.dev"
Repository = "https://github.com/abhishekjha/kavach"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
