[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kavach"
version = "0.2.0"
description = "The security and permission layer for agentic AI systems"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Abhishek Jha" },
]
keywords = ["ai", "security", "agents", "llm", "prompt-injection", "rbac", "zero-trust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "prometheus-client>=0.17.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "ruff>=0.1.0",
    "mypy>=1.5",
]
ml = [
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "onnxruntime>=1.15",
    "tokenizers>=0.14",
    "huggingface-hub>=0.20",
    "redis>=5.0",
    "datasets>=2.14",
]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
langchain = ["langchain-core>=0.1"]
slm = [
    "transformers>=4.35",
    "torch>=2.0",
]
all = [
    "kavach[openai,anthropic,langchain,ml,slm]",
]

[project.urls]
Homepage = "https://github.com/abhishekjha/kavach"
Documentation = "https://kavach.dev"
Repository = "https://github.com/abhishekjha/kavach"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
